--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.6.1",
     "bootstrap": "^5.3.2",
     "bootstrap-vue-next": "^0.14.10",
     "vue": "^3.3.4",
